CRITICAL FIX: Handle SSR mode for brand pages by fetching brand data from params
Fix 500 errors on all brand pages caused by getStaticPaths() being ignored in SSR mode. Now brand data is fetched directly using getEntry() when props are undefined.

--- a/src/pages/[brand].astro
+++ b/src/pages/[brand].astro
@@ -15,7 +15,18 @@ export async function getStaticPaths() {
   }));
 }
 
-const { brand } = Astro.props;
+// Get brand data from props (static) or fetch it (SSR)
+let brand = Astro.props.brand;
+if (!brand) {
+  // In SSR mode, fetch the brand using the route parameter
+  const brandSlug = Astro.params.brand;
+  brand = await getEntry('brands', brandSlug);
+
+  if (!brand) {
+    return Astro.redirect('/404');
+  }
+}
+
 const { Content } = await brand.render();
 
 // Get related brands
