--- a/src/pages/go/[brand].astro
+++ b/src/pages/go/[brand].astro
@@ -1,5 +1,3 @@
-<!--
-  DEPRECATED: This file should be deleted.
-  The [brand].ts API route handles all affiliate redirects.
-  This empty file exists due to file system permissions preventing deletion.
--->
+---
+// This file has been deprecated - [brand].ts handles all affiliate redirects
+---
